logs/hogwatch.log
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/gevent'...
Compiling './lib/python3.5/site-packages/gevent/_util_py2.py'...
***   File "./lib/python3.5/site-packages/gevent/_util_py2.py", line 7
    raise type, value, tb
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gevent/libev'...
Listing './lib/python3.5/site-packages/gevent-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/gevent_websocket-0.10.1.dist-info'...
Listing './lib/python3.5/site-packages/geventwebsocket'...
Listing './lib/python3.5/site-packages/geventwebsocket/gunicorn'...
Listing './lib/python3.5/site-packages/geventwebsocket/protocols'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/hogwatch'...
Listing './lib/python3.5/site-packages/hogwatch/server'...
Compiling './lib/python3.5/site-packages/hogwatch/server/__init__.py'...
Listing './lib/python3.5/site-packages/hogwatch/server/static'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/bourbon'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/bourbon/addons'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/bourbon/css3'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/bourbon/functions'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/bourbon/helpers'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/bourbon/settings'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/css'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/fonts'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/fonts/oxygen'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/js'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/js/vendor'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/partials'...
Listing './lib/python3.5/site-packages/hogwatch/server/static/scss'...
Listing './lib/python3.5/site-packages/hogwatch/server/watchdogs'...
Compiling './lib/python3.5/site-packages/hogwatch/server/watchdogs/__init__.py'...
Compiling './lib/python3.5/site-packages/hogwatch/server/watchdogs/nethogs.py'...
***   File "./lib/python3.5/site-packages/hogwatch/server/watchdogs/nethogs.py", line 21
    print "Windows is not supported."
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hogwatch/server/web_service.py'...
***   File "./lib/python3.5/site-packages/hogwatch/server/web_service.py", line 35
    print 'starting web server at: localhost:' + str(port)
                                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hogwatch/templates'...
Listing './lib/python3.5/site-packages/hogwatch-0.1.8.egg-info'...
Listing './lib/python3.5/site-packages/netifaces-0.10.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pywebview-1.8.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webview'...
Listing './share'...
Listing './share/python-wheels'...
